--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
             android:name=".ActivityDetails"
             android:label="@string/title_activity_activity_details"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ItineraireActivity"
+            android:label="@string/title_activity_itineraire"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
