--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             android:name=".ItineraireActivity"
             android:label="@string/title_activity_itineraire"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".Note"
+            android:label="@string/title_activity_note"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
